--- a/kinkstore/index.html
+++ b/kinkstore/index.html
@@ -4,37 +4,180 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="styles/reset.css" />
 	<link rel="stylesheet" type="text/css" href="styles/main.css" />
+	<link rel="stylesheet" type="text/css" href="styles/skin.css" />
 </head>
 <body>
-	<div id="wrapper">
-		<div id="account-bar"></div>
+<div id="wrapper">
+	<div id="holder">
+		<div id="account-bar">
+			<ul id="lang">
+		    	<li></li>
+		    	<li></li>
+		    	<li></li>
+		    </ul>
+		    <ul id="currency">
+		    	<li></li>
+		    	<li></li>
+		    	<li></li>
+		    </ul>
+		</div>
 		<header>
-			<div id="logo-bar"></div>
-			<nav id="menu"></nav>
+			<div id="logo-bar">
+				<span>SEX</span><span>SHOP</span>
+				<div id="search-box">
+					<input type="text" id="searchfor" /><input type="submit" onclick="javascript:alert('Go!')" value=""/>
+				</div>
+			</div>
+			<nav id="menu">
+				<ul>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  </ul>
+			</nav>
 		</header>
 		<div id="banner"></div>
 		<div id="container">
-			<aside id="sidebar"></aside>
+			<aside id="sidebar">
+				<h3 class="label">categories</h3>
+				<ul>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  </ul>
+				<h3 class="label">information</h3>
+				<ul>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  </ul>
+			</aside>
 			<section id="content">
 				<ul>
-					<li class="item"><a href="">LINK</a></li>
-					<li class="item"><a href="">LINK</a></li>
-					<li class="item"><a href="">LINK</a></li>
-					<li class="item"><a href="">LINK</a></li>
-					<li class="item"><a href="">LINK</a></li>
-					<li class="item"><a href="">LINK</a></li>
-					<li class="item"><a href="">LINK</a></li>
-					<li class="item"><a href="">LINK</a></li>
-					<li class="item"><a href="">LINK</a></li>
+					<li class="item">
+						<img src="images/item.jpg">
+						<p class="item-title">the item title</p>
+						<p class="price">23.5</p>
+						<a class="addtocard">Add to Cart</a>
+					</li>
+					<li class="item">
+						<img src="images/item2.jpg">
+						<p class="item-title">the item title</p>
+						<p class="price">23.5</p>
+						<a class="addtocard">Add to Cart</a>
+					</li>
+					<li class="item">
+						<img src="images/item.jpg">
+						<p class="item-title">the item title</p>
+						<p class="price">23.5</p>
+						<a class="addtocard">Add to Cart</a>
+					</li>
+					<li class="item">
+						<img src="images/item2.jpg">
+						<p class="item-title">the item title</p>
+						<p class="price">23.5</p>
+						<a class="addtocard">Add to Cart</a>
+					</li>
+					<li class="item">
+						<img src="images/item.jpg">
+						<p class="item-title">the item title</p>
+						<p class="price">23.5</p>
+						<a class="addtocard">Add to Cart</a>
+					</li>
+					<li class="item">
+						<img src="images/item.jpg">
+						<p class="item-title">the item title</p>
+						<p class="price">23.5</p>
+						<a class="addtocard">Add to Cart</a>
+					</li>
+					<li class="item">
+						<img src="images/item.jpg">
+						<p class="item-title">the item title</p>
+						<p class="price">23.5</p>
+						<a class="addtocard">Add to Cart</a>
+					</li>
+					<li class="item">
+						<img src="images/item2.jpg">
+						<p class="item-title">the item title</p>
+						<p class="price"><span class="old-price">34.8</span>23.5</p>
+						<a class="addtocard">Add to Cart</a>
+					</li>
 				</ul>
-				
 			</section>
-			<section id="featured"></section>
-			<footer>
-				<div id="foot-menu"></div>
-				<div id="copyright"></div>
-			</footer>
-		</div>
+		</div>	
+		<section id="featured">
+			<ul>
+				<li class="item">
+					<img src="images/item.jpg">
+					<p class="item-title">the item title</p>
+					<p class="price">23.5</p>
+					<a class="addtocard">Add to Cart</a>
+				</li>
+				<li class="item">
+					<img src="images/item2.jpg">
+					<p class="item-title">the item title</p>
+					<p class="price">23.5</p>
+					<a class="addtocard">Add to Cart</a>
+				</li>
+				<li class="item">
+					<img src="images/item.jpg">
+					<p class="item-title">the item title</p>
+					<p class="price">23.5</p>
+					<a class="addtocard">Add to Cart</a>
+				</li>
+				<li class="item">
+					<img src="images/item2.jpg">
+					<p class="item-title">the item title</p>
+					<p class="price">23.5</p>
+					<a class="addtocard">Add to Cart</a>
+				</li>
+				<li class="item">
+					<img src="images/item.jpg">
+					<p class="item-title">the item title</p>
+					<p class="price">23.5</p>
+					<a class="addtocard">Add to Cart</a>
+				</li>
+				<li class="item">
+					<img src="images/item.jpg">
+					<p class="item-title">the item title</p>
+					<p class="price">23.5</p>
+					<a class="addtocard">Add to Cart</a>
+				</li>
+				<li class="item">
+					<img src="images/item.jpg">
+					<p class="item-title">the item title</p>
+					<p class="price">23.5</p>
+					<a class="addtocard">Add to Cart</a>
+				</li>
+				<li class="item">
+					<img src="images/item2.jpg">
+					<p class="item-title">the item title</p>
+					<p class="price"><span class="old-price">34.8</span>23.5</p>
+					<a class="addtocard">Add to Cart</a>
+				</li>
+			</ul>
+		</section>
+		<footer>
+			<div id="foot-menu"></div>
+			<div id="copyright"></div>
+		</footer>
+		
 	</div>
+</div>
 </body>
 </html>
