--- a/kinkstore/index.html
+++ b/kinkstore/index.html
@@ -68,6 +68,7 @@
 				  </ul>
 			</aside>
 			<section id="content">
+				<h2 class="featured-title">Featured Products</h2>
 				<ul>
 					<li class="item">
 						<img src="images/item.jpg">
@@ -121,54 +122,47 @@
 			</section>
 		</div>	
 		<section id="featured">
+			<h2 class="featured-title">Hot Deals</h2>
 			<ul>
 				<li class="item">
 					<img src="images/item.jpg">
+					<p class="item-title">the item title that is slightly long and will have 2-line title</p>
+					<p class="price">23.5</p>
+				</li>
+				<li class="item">
+					<img src="images/item2.jpg">
+					<p class="item-title">the item title and the item title again</p>
+					<p class="price">23.5</p>
+				</li>
+				<li class="item">
+					<img src="images/item.jpg">
 					<p class="item-title">the item title</p>
 					<p class="price">23.5</p>
-					<a class="addtocard">Add to Cart</a>
 				</li>
 				<li class="item">
 					<img src="images/item2.jpg">
 					<p class="item-title">the item title</p>
 					<p class="price">23.5</p>
-					<a class="addtocard">Add to Cart</a>
 				</li>
 				<li class="item">
 					<img src="images/item.jpg">
 					<p class="item-title">the item title</p>
 					<p class="price">23.5</p>
-					<a class="addtocard">Add to Cart</a>
-				</li>
-				<li class="item">
-					<img src="images/item2.jpg">
-					<p class="item-title">the item title</p>
-					<p class="price">23.5</p>
-					<a class="addtocard">Add to Cart</a>
 				</li>
 				<li class="item">
 					<img src="images/item.jpg">
 					<p class="item-title">the item title</p>
 					<p class="price">23.5</p>
-					<a class="addtocard">Add to Cart</a>
 				</li>
 				<li class="item">
 					<img src="images/item.jpg">
 					<p class="item-title">the item title</p>
 					<p class="price">23.5</p>
-					<a class="addtocard">Add to Cart</a>
-				</li>
-				<li class="item">
-					<img src="images/item.jpg">
-					<p class="item-title">the item title</p>
-					<p class="price">23.5</p>
-					<a class="addtocard">Add to Cart</a>
 				</li>
 				<li class="item">
 					<img src="images/item2.jpg">
 					<p class="item-title">the item title</p>
 					<p class="price"><span class="old-price">34.8</span>23.5</p>
-					<a class="addtocard">Add to Cart</a>
 				</li>
 			</ul>
 		</section>
