sample bgr added

--- a/kinkstore/boot_index.html
+++ b/kinkstore/boot_index.html
@@ -7,42 +7,38 @@
 	<link rel="stylesheet" type="text/css" href="styles/skin.css" />
 </head>
 <body>
-	<!-- <div id="wrapper"> -->
-	<div id="account-bar">
-		<div class="holder">
-			Some Lang choice
-			<ul id="lang">
-				<li>BG</li>
-				<li>EN</li>
-				<li>DE</li>
-			</ul>
-			Currency choice
-			<ul id="currency">
-				<li>LV</li>
-				<li>USD</li>
-				<li>EUR</li>
-			</ul>
-		</div>
-	</div>
+<div id="wrapper">
 	<div class="holder">
+		<div id="account-bar">
+			<ul id="lang">
+		    	<li></li>
+		    	<li></li>
+		    	<li></li>
+		    </ul>
+		    <ul id="currency">
+		    	<li></li>
+		    	<li></li>
+		    	<li></li>
+		    </ul>
+		</div>
 		<header>
 			<div id="logo-bar">
-				<span>KINK</span><span>STORE</span><span></span><span>NET</span>
+				<span>SEX</span><span>SHOP</span>
 				<div id="search-box">
 					<input type="text" id="searchfor" /><input type="submit" onclick="javascript:alert('Go!')" value=""/>
 				</div>
 			</div>
 			<nav id="menu">
 				<ul>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-				</ul>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  </ul>
 			</nav>
 		</header>
 		<div id="banner"></div>
@@ -50,26 +46,26 @@
 			<aside id="sidebar">
 				<h3 class="label">categories</h3>
 				<ul>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-				</ul>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  </ul>
 				<h3 class="label">information</h3>
 				<ul>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-				</ul>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  </ul>
 			</aside>
 			<section id="content">
 				<h2 class="featured-title">Featured Products</h2>
@@ -124,7 +120,7 @@
 					</li>
 				</ul>
 			</section>
-		</div>
+		</div>	
 		<section id="featured">
 			<h2 class="featured-title">Hot Deals</h2>
 			<ul>
@@ -171,65 +167,24 @@
 			</ul>
 		</section>
 	</div>
-	<footer>
-		<div class="holder">
-			<div class="row">
-				<div class="col5">
-					<ul>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-					</ul>
-				</div>
-				<div class="col5">
-					<ul>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-					</ul>
-				</div>
-				<div class="col5">
-					<ul>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-					</ul>
-				</div>
-				<div class="col5">
-					<ul>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-					</ul>
-				</div>
-				<div class="col5">
-					<ul>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-					</ul>
-				</div>
+	<div class="holder">
+		<footer>
+			<div id="foot-menu">
+				<ul>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  	<li><a href="">link</a></li>
+				  </ul>
 			</div>
-			<div id="copyright">This is the Copyright Message &copy; A&V</div>
-		</div>
-	</footer>
-	
-	
-	<!-- </div> -->
+			<div id="copyright"></div>
+		</footer>
+		
+	</div>
+</div>
 </body>
 </html>
