--- a/kinkstore/index.html
+++ b/kinkstore/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/reset.css" />
 	<link rel="stylesheet" type="text/css" href="styles/main.css" />
 	<link rel="stylesheet" type="text/css" href="styles/skin.css" />
+	<link rel="stylesheet" type="text/css" href="styles/media-queries.css" />
 </head>
 <body>
 	<!-- <div id="wrapper"> -->
@@ -29,7 +30,7 @@
 			<div id="logo-bar">
 				<span>KINK</span><span>STORE</span><span></span><span>NET</span>
 				<div id="search-box">
-					<input type="text" id="searchfor" /><input type="submit" onclick="javascript:alert('Go!')" value=""/>
+					<input type="text" id="searchfor" /><input type="submit" onclick="javascript:alert('Go!')" value="&nbsp;" />
 				</div>
 			</div>
 			<nav id="menu">
@@ -175,6 +176,7 @@
 		<div class="holder">
 			<div class="row">
 				<div class="col5">
+					<h3>Links Title</h3>
 					<ul>
 						<li><a href="">Some Link Title</a></li>
 						<li><a href="">Some Link Title</a></li>
@@ -185,6 +187,7 @@
 					</ul>
 				</div>
 				<div class="col5">
+					<h3>Links Title</h3>
 					<ul>
 						<li><a href="">Some Link Title</a></li>
 						<li><a href="">Some Link Title</a></li>
@@ -195,6 +198,7 @@
 					</ul>
 				</div>
 				<div class="col5">
+					<h3>Links Title</h3>
 					<ul>
 						<li><a href="">Some Link Title</a></li>
 						<li><a href="">Some Link Title</a></li>
@@ -205,6 +209,7 @@
 					</ul>
 				</div>
 				<div class="col5">
+					<h3>Links Title</h3>
 					<ul>
 						<li><a href="">Some Link Title</a></li>
 						<li><a href="">Some Link Title</a></li>
@@ -215,6 +220,7 @@
 					</ul>
 				</div>
 				<div class="col5">
+					<h3>Links Title</h3>
 					<ul>
 						<li><a href="">Some Link Title</a></li>
 						<li><a href="">Some Link Title</a></li>
