--- a/kinkstore/index.html
+++ b/kinkstore/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
 	<title></title>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+	
 	<link rel="stylesheet" type="text/css" href="styles/reset.css" />
 	<link rel="stylesheet" type="text/css" href="styles/main.css" />
 	<link rel="stylesheet" type="text/css" href="styles/skin.css" />
