MQ Logo section

--- a/kinkstore/index.html
+++ b/kinkstore/index.html
@@ -5,7 +5,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	
+
 	<link rel="stylesheet" type="text/css" href="styles/reset.css" />
 	<link rel="stylesheet" type="text/css" href="styles/main.css" />
 	<link rel="stylesheet" type="text/css" href="styles/skin.css" />
@@ -32,21 +32,24 @@
 	<div class="holder">
 		<header>
 			<div id="logo-bar">
-				<span>KINK</span><span>STORE</span><span></span><span>NET</span>
+				<div id="logo">
+					<span>KINK</span><span>STORE</span><span></span><span>NET</span>
+				</div>
 				<div id="search-box">
 					<input type="text" id="searchfor" /><input type="submit" onclick="javascript:alert('Go!')" value="&nbsp;" />
 				</div>
 			</div>
 			<nav id="menu">
 				<ul>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
+				  	<li><a href="">Link 1</a></li>
+				  	<li><a href="">Link 2</a></li>
+				  	<li><a href="">Link 3</a></li>
+				  	<li><a href="">Link 4</a></li>
+				  	<li><a href="">Link 5</a></li>
+				  	<li><a href="">Link 6</a></li>
+				  	<li><a href="">Link 7</a></li>
+				  	<li><a href="">Link 8</a></li>
+				  	<li><a href="">Link 9</a></li>
 				</ul>
 			</nav>
 		</header>
