--- a/kinkstore/index.html
+++ b/kinkstore/index.html
@@ -37,10 +37,10 @@
 				</div>
 				<div class="navbar-fluid">
 					<button type="button" class="navbar-toggle">
-						<!-- <span class="sr-only">Toggle navigation</span>
+						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span> -->
+						<span class="icon-bar"></span>
 					</button>
 				</div>
 				<div id="search-box">
