MQ search box update

--- a/kinkstore/index.html
+++ b/kinkstore/index.html
@@ -51,7 +51,7 @@
 				<ul>
 				  	<li><a href="">Link 1</a></li>
 				  	<li><a href="">Link 2</a>
-				  		<ul>
+				  		<div class="submenu"><ul>
 						  	<li><a href="">Sub-Link 1</a></li>
 						  	<li><a href="">Sub-Link 2</a></li>
 						  	<li><a href="">Sub-Link 3</a></li>
@@ -61,12 +61,19 @@
 						  	<li><a href="">Sub-Link 7</a></li>
 						  	<li><a href="">Sub-Link 8</a></li>
 						  	<li><a href="">Sub-Link 9</a></li>
-						</ul>
+						</ul></div>
 				  	</li>
 				  	<li><a href="">Link 3</a></li>
 				  	<li><a href="">Link 4</a></li>
 				  	<li><a href="">Link 5</a></li>
-				  	<li><a href="">Link 6</a></li>
+				  	<li><a href="">Link 6</a>
+				  		<div class="submenu"><ul>
+						  	<li><a href="">Sub-Link 1</a></li>
+						  	<li><a href="">Sub-Link 2</a></li>
+						  	<li><a href="">Sub-Link 3</a></li>
+						  	<li><a href="">Sub-Link 4</a></li>
+						</ul></div>
+					</li>
 				  	<li><a href="">Link 7</a></li>
 				  	<li><a href="">Link 8</a></li>
 				  	<li><a href="">Link 9</a></li>
