--- a/kinkstore/inside.html
+++ b/kinkstore/inside.html
@@ -114,57 +114,18 @@
 				</ul>
 			</aside>
 			<section id="content">
-				<h2 class="featured-title">Featured Products</h2>
-				<ul>
-					<li class="item">
-						<img src="images/item.jpg">
-						<p class="item-title">the item title</p>
-						<p class="price">23.5</p>
-						<a class="addtocard">Add to Cart</a>
-					</li>
-					<li class="item">
-						<img src="images/item2.jpg">
-						<p class="item-title">the item title</p>
-						<p class="price">23.5</p>
-						<a class="addtocard">Add to Cart</a>
-					</li>
-					<li class="item">
-						<img src="images/item.jpg">
-						<p class="item-title">the item title</p>
-						<p class="price">23.5</p>
-						<a class="addtocard">Add to Cart</a>
-					</li>
-					<li class="item">
-						<img src="images/item2.jpg">
-						<p class="item-title">the item title</p>
-						<p class="price">23.5</p>
-						<a class="addtocard">Add to Cart</a>
-					</li>
-					<li class="item">
-						<img src="images/item.jpg">
-						<p class="item-title">the item title</p>
-						<p class="price">23.5</p>
-						<a class="addtocard">Add to Cart</a>
-					</li>
-					<li class="item">
-						<img src="images/item.jpg">
-						<p class="item-title">the item title</p>
-						<p class="price">23.5</p>
-						<a class="addtocard">Add to Cart</a>
-					</li>
-					<li class="item">
-						<img src="images/item.jpg">
-						<p class="item-title">the item title</p>
-						<p class="price">23.5</p>
-						<a class="addtocard">Add to Cart</a>
-					</li>
-					<li class="item">
-						<img src="images/item2.jpg">
-						<p class="item-title">the item title</p>
-						<p class="price"><span class="old-price">34.8</span>23.5</p>
-						<a class="addtocard">Add to Cart</a>
-					</li>
-				</ul>
+				<div class="item-img">
+					<img src="images/items/big_image.jpg" title="this is a sample from internet"/>
+				</div>
+				<div class="item-info">
+					<h2 class="item-title">Item's Title here, Might be Quite Long though</h2>
+					<div class="item-desc">Item's description text which also can be a bit long, but not that much</div>
+					<div class="item-price"><span class="old-price">34.8</span>$23.00</div>
+					<div class="item-to-cart">
+						Qty: <input value="1" class="quantity"></input><a class="addtocard">Add to Cart</a>
+					</div>	
+					
+				</div>
 			</section>
 		</div>
 		<section id="featured">
