Inside Page - additional info block

--- a/kinkstore/inside.html
+++ b/kinkstore/inside.html
@@ -124,7 +124,29 @@
 					<div class="item-to-cart">
 						Qty: <input value="1" class="quantity"></input><a class="addtocard">Add to Cart</a>
 					</div>	
-					
+					<div class="item-more-info accordion">
+						<div class="section">
+							<p class="title"><a href="">CLICK 01<i class="icon-plus"></i></a></p>
+							<div class="section-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus doloribus dolorem voluptates velit dignissimos iure consequuntur minima, perspiciatis impedit, itaque sed, voluptas. Dolores qui officia labore nihil quidem aut! Doloremque.</div>
+						</div>
+						<div class="section">
+							<p class="title"><a href="">CLICK 02 <i class="icon-plus"></i></a></p>
+							<div class="section-content">Totam fuga ex, nam blanditiis suscipit aut cupiditate voluptate repudiandae vitae alias quis unde nemo, ducimus iure hic ullam. Explicabo, nobis porro sint voluptates laboriosam molestiae necessitatibus quos cumque molestias.</div>
+						</div>
+						<div class="section">
+							<p class="title"><a href="">CLICK 03 <i class="icon-plus"></i></a></p>
+							<div class="section-content">Quam dolore sequi consectetur, explicabo quas aliquid corporis esse dolor. Quasi voluptas maxime accusamus quas, enim blanditiis excepturi minus repellendus hic corrupti nam minima? Quas reprehenderit placeat nam mollitia alias.</div>
+						</div>
+						<div class="section">
+							<p class="title"><a href="">CLICK 04 <i class="icon-plus"></i></a></p>
+							<div class="section-content">Et aliquam fuga nostrum tenetur doloremque amet temporibus atque, sequi quae accusantium similique mollitia qui facere cum dolor ipsum impedit hic aspernatur, obcaecati maiores beatae illo porro? Unde, laboriosam, cumque?</div>
+						</div>
+						<div class="section">
+							<p class="title"><a href="">CLICK 05 <i class="icon-plus"></i></a></p>
+							<div class="section-content">Eos, rem, pariatur. Eum, velit cum tenetur ipsa, nulla est quaerat pariatur debitis aperiam corrupti odio id ut in laborum amet, error iusto labore molestias. Porro nisi sapiente architecto laborum!</div>
+						</div>
+					</div>	
+
 				</div>
 			</section>
 		</div>
