--- a/kinkstore/inside.html
+++ b/kinkstore/inside.html
@@ -124,6 +124,7 @@
 					<div class="item-to-cart">
 						Qty: <input value="1" class="quantity"></input><a class="addtocard">Add to Cart</a>
 					</div>	
+					<div id="stef"></div>
 					<div class="item-more-info accordion">
 						<div class="section">
 							<p class="title"><a href="">CLICK 01<i class="icon-plus"></i></a></p>
