--- a/kinkstore/inside.html
+++ b/kinkstore/inside.html
@@ -260,8 +260,8 @@
 		</div>
 	</footer>
 	
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="scripts/main.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="scripts/main.js"></script>
 	<!-- </div> -->
 </body>
 </html>
