--- a/kinkstore/inside.html
+++ b/kinkstore/inside.html
@@ -127,7 +127,7 @@
 					<div id="stef"></div>
 					<div class="item-more-info accordion">
 						<div class="section">
-							<p class="title"><a href="">CLICK 01<i class="icon-plus"></i></a></p>
+							<p class="title">CLICK 01<i class="icon-plus"></i></p>
 							<div class="section-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus doloribus dolorem voluptates velit dignissimos iure consequuntur minima, perspiciatis impedit, itaque sed, voluptas. Dolores qui officia labore nihil quidem aut! Doloremque.</div>
 						</div>
 						<div class="section">
