--- a/kinkstore/inside.html
+++ b/kinkstore/inside.html
@@ -56,34 +56,34 @@
 			</div>
 			<nav id="menu">
 				<ul>
-				  	<li><a href="">Link 1</a></li>
-				  	<li><a href="">Link 2</a>
+				  	<li><a href="#">Link 1</a></li>
+				  	<li><a href="#">Link 2</a>
 				  		<div class="submenu"><ul>
-						  	<li><a href="">Sub-Link 1</a></li>
-						  	<li><a href="">Sub-Link 2</a></li>
-						  	<li><a href="">Sub-Link 3</a></li>
-						  	<li><a href="">Sub-Link 4</a></li>
-						  	<li><a href="">Sub-Link 5</a></li>
-						  	<li><a href="">Sub-Link 6</a></li>
-						  	<li><a href="">Sub-Link 7</a></li>
-						  	<li><a href="">Sub-Link 8</a></li>
-						  	<li><a href="">Sub-Link 9</a></li>
+						  	<li><a href="#">Sub-Link 1</a></li>
+						  	<li><a href="#">Sub-Link 2</a></li>
+						  	<li><a href="#">Sub-Link 3</a></li>
+						  	<li><a href="#">Sub-Link 4</a></li>
+						  	<li><a href="#">Sub-Link 5</a></li>
+						  	<li><a href="#">Sub-Link 6</a></li>
+						  	<li><a href="#">Sub-Link 7</a></li>
+						  	<li><a href="#">Sub-Link 8</a></li>
+						  	<li><a href="#">Sub-Link 9</a></li>
 						</ul></div>
 				  	</li>
-				  	<li><a href="">Link 3</a></li>
-				  	<li><a href="">Link 4</a></li>
-				  	<li><a href="">Link 5</a></li>
-				  	<li><a href="">Link 6</a>
+				  	<li><a href="#">Link 3</a></li>
+				  	<li><a href="#">Link 4</a></li>
+				  	<li><a href="#">Link 5</a></li>
+				  	<li><a href="#">Link 6</a>
 				  		<div class="submenu"><ul>
-						  	<li><a href="">Sub-Link 1</a></li>
-						  	<li><a href="">Sub-Link 2</a></li>
-						  	<li><a href="">Sub-Link 3</a></li>
-						  	<li><a href="">Sub-Link 4</a></li>
+						  	<li><a href="#">Sub-Link 1</a></li>
+						  	<li><a href="#">Sub-Link 2</a></li>
+						  	<li><a href="#">Sub-Link 3</a></li>
+						  	<li><a href="#">Sub-Link 4</a></li>
 						</ul></div>
 					</li>
-				  	<li><a href="">Link 7</a></li>
-				  	<li><a href="">Link 8</a></li>
-				  	<li><a href="">Link 9</a></li>
+				  	<li><a href="#">Link 7</a></li>
+				  	<li><a href="#">Link 8</a></li>
+				  	<li><a href="#">Link 9</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -92,25 +92,25 @@
 			<aside id="sidebar">
 				<h3 class="label">categories</h3>
 				<ul>
-					<li><a href="">link that has quite long name and let's see it</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
+					<li><a href="#">link that has quite long name and let's see it</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
 				</ul>
 				<h3 class="label">information</h3>
 				<ul>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
-					<li><a href="">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
 				</ul>
 			</aside>
 			<section id="content">
@@ -127,23 +127,23 @@
 					<div id="stef"></div>
 					<div class="item-more-info accordion">
 						<div class="section">
-							<p class="title">CLICK 01<i class="icon-plus"></i></p>
+							<p class="title"><a href="#">CLICK 01<i class="icon-plus"></i></a></p>
 							<div class="section-content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus doloribus dolorem voluptates velit dignissimos iure consequuntur minima, perspiciatis impedit, itaque sed, voluptas. Dolores qui officia labore nihil quidem aut! Doloremque.</div>
 						</div>
 						<div class="section">
-							<p class="title"><a href="">CLICK 02 <i class="icon-plus"></i></a></p>
+							<p class="title"><a href="#">CLICK 02 <i class="icon-plus"></i></a></p>
 							<div class="section-content">Totam fuga ex, nam blanditiis suscipit aut cupiditate voluptate repudiandae vitae alias quis unde nemo, ducimus iure hic ullam. Explicabo, nobis porro sint voluptates laboriosam molestiae necessitatibus quos cumque molestias.</div>
 						</div>
 						<div class="section">
-							<p class="title"><a href="">CLICK 03 <i class="icon-plus"></i></a></p>
+							<p class="title"><a href="#">CLICK 03 <i class="icon-plus"></i></a></p>
 							<div class="section-content">Quam dolore sequi consectetur, explicabo quas aliquid corporis esse dolor. Quasi voluptas maxime accusamus quas, enim blanditiis excepturi minus repellendus hic corrupti nam minima? Quas reprehenderit placeat nam mollitia alias.</div>
 						</div>
 						<div class="section">
-							<p class="title"><a href="">CLICK 04 <i class="icon-plus"></i></a></p>
+							<p class="title"><a href="#">CLICK 04 <i class="icon-plus"></i></a></p>
 							<div class="section-content">Et aliquam fuga nostrum tenetur doloremque amet temporibus atque, sequi quae accusantium similique mollitia qui facere cum dolor ipsum impedit hic aspernatur, obcaecati maiores beatae illo porro? Unde, laboriosam, cumque?</div>
 						</div>
 						<div class="section">
-							<p class="title"><a href="">CLICK 05 <i class="icon-plus"></i></a></p>
+							<p class="title"><a href="#">CLICK 05 <i class="icon-plus"></i></a></p>
 							<div class="section-content">Eos, rem, pariatur. Eum, velit cum tenetur ipsa, nulla est quaerat pariatur debitis aperiam corrupti odio id ut in laborum amet, error iusto labore molestias. Porro nisi sapiente architecto laborum!</div>
 						</div>
 					</div>	
@@ -203,56 +203,56 @@
 				<div class="col5">
 					<h3>Links Title</h3>
 					<ul>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
 					</ul>
 				</div>
 				<div class="col5">
 					<h3>Links Title</h3>
 					<ul>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
 					</ul>
 				</div>
 				<div class="col5">
 					<h3>Links Title</h3>
 					<ul>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
 					</ul>
 				</div>
 				<div class="col5">
 					<h3>Links Title</h3>
 					<ul>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
 					</ul>
 				</div>
 				<div class="col5">
 					<h3>Links Title</h3>
 					<ul>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
-						<li><a href="">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
+						<li><a href="#">Some Link Title</a></li>
 					</ul>
 				</div>
 			</div>
