--- a/kinkstore/index.html
+++ b/kinkstore/index.html
@@ -116,49 +116,49 @@
 			<section id="content">
 				<h2 class="featured-title">Featured Products</h2>
 				<ul>
-					<li class="item">
+					<li class="item crsl-item">
 						<img src="images/item.jpg">
 						<p class="item-title">the item title</p>
 						<p class="price">23.5</p>
 						<a class="addtocard">Add to Cart</a>
 					</li>
-					<li class="item">
+					<li class="item crsl-item">
 						<img src="images/item2.jpg">
 						<p class="item-title">the item title</p>
 						<p class="price">23.5</p>
 						<a class="addtocard">Add to Cart</a>
 					</li>
-					<li class="item">
+					<li class="item crsl-item">
 						<img src="images/item.jpg">
 						<p class="item-title">the item title</p>
 						<p class="price">23.5</p>
 						<a class="addtocard">Add to Cart</a>
 					</li>
-					<li class="item">
+					<li class="item crsl-item">
 						<img src="images/item2.jpg">
 						<p class="item-title">the item title</p>
 						<p class="price">23.5</p>
 						<a class="addtocard">Add to Cart</a>
 					</li>
-					<li class="item">
+					<li class="item crsl-item">
 						<img src="images/item.jpg">
 						<p class="item-title">the item title</p>
 						<p class="price">23.5</p>
 						<a class="addtocard">Add to Cart</a>
 					</li>
-					<li class="item">
+					<li class="item crsl-item">
 						<img src="images/item.jpg">
 						<p class="item-title">the item title</p>
 						<p class="price">23.5</p>
 						<a class="addtocard">Add to Cart</a>
 					</li>
-					<li class="item">
+					<li class="item crsl-item">
 						<img src="images/item.jpg">
 						<p class="item-title">the item title</p>
 						<p class="price">23.5</p>
 						<a class="addtocard">Add to Cart</a>
 					</li>
-					<li class="item">
+					<li class="item crsl-item">
 						<img src="images/item2.jpg">
 						<p class="item-title">the item title</p>
 						<p class="price"><span class="old-price">34.8</span>23.5</p>
@@ -169,48 +169,57 @@
 		</div>
 		<section id="featured">
 			<h2 class="featured-title">Hot Deals</h2>
-			<ul>
-				<li class="item">
-					<img src="images/item.jpg">
-					<p class="item-title">the item title that is slightly long and will have 2-line title</p>
-					<p class="price">23.5</p>
-				</li>
-				<li class="item">
-					<img src="images/item2.jpg">
-					<p class="item-title">the item title and the item title again</p>
-					<p class="price">23.5</p>
-				</li>
-				<li class="item">
-					<img src="images/item.jpg">
-					<p class="item-title">the item title</p>
-					<p class="price">23.5</p>
-				</li>
-				<li class="item">
-					<img src="images/item2.jpg">
-					<p class="item-title">the item title</p>
-					<p class="price">23.5</p>
-				</li>
-				<li class="item">
-					<img src="images/item.jpg">
-					<p class="item-title">the item title</p>
-					<p class="price">23.5</p>
-				</li>
-				<li class="item">
-					<img src="images/item.jpg">
-					<p class="item-title">the item title</p>
-					<p class="price">23.5</p>
-				</li>
-				<li class="item">
-					<img src="images/item.jpg">
-					<p class="item-title">the item title</p>
-					<p class="price">23.5</p>
-				</li>
-				<li class="item">
-					<img src="images/item2.jpg">
-					<p class="item-title">the item title</p>
-					<p class="price"><span class="old-price">34.8</span>23.5</p>
-				</li>
-			</ul>
+			
+			<div id="NAV-ID" class="crsl-nav">
+				<a href="#" class="previous">Previous</a>
+				<a href="#" class="next">Next</a>
+
+				<div class="crsl-items"  data-navigation="NAV-ID">
+				<ul class="crsl-wrap">
+					<li class="item crsl-item">
+						<img src="images/item.jpg">
+						<p class="item-title">1. the item title that is slightly long and will have 2-line title</p>
+						<p class="price">23.5</p>
+					</li>
+					<li class="item crsl-item">
+						<img src="images/item2.jpg">
+						<p class="item-title">2. the item title and the item title again</p>
+						<p class="price">23.5</p>
+					</li>
+					<li class="item crsl-item">
+						<img src="images/item.jpg">
+						<p class="item-title">3. the item title</p>
+						<p class="price">24.5</p>
+					</li>
+					<li class="item crsl-item">
+						<img src="images/item2.jpg">
+						<p class="item-title">4. the item title</p>
+						<p class="price">24.5</p>
+					</li>
+					<li class="item crsl-item">
+						<img src="images/item.jpg">
+						<p class="item-title">5. the item title</p>
+						<p class="price">25.5</p>
+					</li>
+					<li class="item crsl-item">
+						<img src="images/item.jpg">
+						<p class="item-title">6. the item title</p>
+						<p class="price">25.5</p>
+					</li>
+					<li class="item crsl-item">
+						<img src="images/item.jpg">
+						<p class="item-title">7. the item title</p>
+						<p class="price">26.5</p>
+					</li>
+					<li class="item crsl-item">
+						<img src="images/item2.jpg">
+						<p class="item-title">8. the item title</p>
+						<p class="price"><span class="old-price">34.8</span>26.5</p>
+					</li>
+				</ul>
+			</div>
+			</div>
+			
 		</section>
 	</div>
 	<footer>
@@ -278,6 +287,7 @@
 	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<script type="text/javascript" src="scripts/main.js"></script>
+	<script src="scripts/libs/responsiveCarousel.js"></script>
 	<!-- </div> -->
 </body>
 </html>
