--- a/kinkstore/index.html
+++ b/kinkstore/index.html
@@ -186,7 +186,7 @@
 						<p class="item-title">2. the item title and the item title again</p>
 						<p class="price">23.5</p>
 					</li>
-					<li class="item crsl-item">
+					<!-- <li class="item crsl-item">
 						<img src="images/item.jpg">
 						<p class="item-title">3. the item title</p>
 						<p class="price">24.5</p>
@@ -215,7 +215,7 @@
 						<img src="images/item2.jpg">
 						<p class="item-title">8. the item title</p>
 						<p class="price"><span class="old-price">34.8</span>26.5</p>
-					</li>
+					</li> -->
 				</ul>
 			</div>
 			</div>
@@ -285,7 +285,8 @@
 		</div>
 	</footer>
 	
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	 <!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
+	<script type="text/javascript" src="scripts/libs/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="scripts/main.js"></script>
 	<script src="scripts/libs/responsiveCarousel.js"></script>
 	<!-- </div> -->
